multiple changes to css, added new image to jumbotron, corrected spacing issues

--- a/app/public/assets/css/style.css
+++ b/app/public/assets/css/style.css
@@ -17,15 +17,61 @@ form {
     padding: 50px;
     font-size: 25px;
 }
-#title{
-    padding-top:50px;
-    padding-bottom:100px;
-    font-weight: 900;
-    text-align: center;
-    color: #40E0D0;
-    font-family: monospace;
-    font-size: 80px;
+span{
+    background-color: #acd5cd;
 }
+.title , #sub-title{
+    /* padding-top:50px; */
+    /* padding-bottom:100px; */
+    /* position: absolute; */
+    /* font-family: "proxima-soft", sans-serif; */
+    font-weight: 300;
+    text-align: right;
+    color: white;
+    font-family: monospace;
+    font-size: 25px;
+    margin-top: 200px;
+    margin-left: 15px;
+    margin-right: 27px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+@media only screen and (min-width: 960px){
+    .title, #sub-title{
+    /* padding-top:50px; */
+    /* padding-bottom:100px; */
+    /* position: absolute; */
+    /* font-family: "proxima-soft", sans-serif; */
+    font-weight: 300;
+    text-align: right;
+    color: white;
+    font-family: monospace;
+    font-size: 20px;
+    margin-top: 200px;
+    margin-left: 30px;
+    margin-right: 75px;
+    overflow: hidden;
+    white-space: nowrap;
+    }
+}
+@media only screen and (min-width: 760px){
+    .title, #sub-title{
+    /* padding-top:50px; */
+    /* padding-bottom:100px; */
+    /* position: absolute; */
+    /* font-family: "proxima-soft", sans-serif; */
+    font-weight: 300;
+    text-align: right;
+    color: white;
+    font-family: monospace;
+    font-size: 25px;
+    margin-top: 200px;
+    margin-left: 30px;
+    overflow: hidden;
+    white-space: nowrap;
+    }
+}
+
 #contacttitle{
     padding-top:50px;
     padding-bottom:10px;
@@ -38,40 +84,64 @@ form {
 
 .jumbotron{
     text-align: center;
-    background: url(https://i.imgur.com/wQ5Yl6z.jpg);
-    height: 100px;
+    /* background: url(https://i.imgur.com/wQ5Yl6z.jpg); */
+    /* background: url(https://i.imgur.com/cjJqn2f.jpg); */
+    background: url(https://i.imgur.com/DXpaIyk.jpg);
+    height: 600px;
     background-size: cover;
     background-position: center center;
-    margin-bottom: 100px;
+    margin-bottom: 0px;
+    /* margin-bottom: 100px; */
+}
+@media only screen and (min-width: 520px){
+   .jumbotron {
+    text-align: center;
+    /* background: url(https://i.imgur.com/wQ5Yl6z.jpg); */
+    /* background: url(https://i.imgur.com/cjJqn2f.jpg); */
+    background: url(https://i.imgur.com/DXpaIyk.jpg);
+    height: 600px;
+    background-size: cover;
+    background-position: center center;
+    margin-bottom: 0px;
+    /* margin-bottom: 100px; */
+    } 
 }
 
-#welcome{
+
+/* #welcome{
     padding-bottom: 100px;
     margin-top: 20px;
-}
+} */
 .display-4{
-    margin-bottom: 30px;
+    /* padding-top: 100px; */
+    /* margin-top: 90%; */
+    /* font-size: 35px; */
 }
 #about-2{
     padding-top: 40px;
-    background-color: #40E0D0;
-    height: 400px;
+    /* background-color: #40E0D0; */
+    /* height: 400px; */
     text-align: center;
+    /* border-bottom: solid 2px; */
+    margin-bottom: 200px;
+}
+#about-3{
+    border-top: solid 1px #0ea9bd;
 }
 #subt1{
     font-weight: 200;
-    font-size: 50px;
+    font-size: 35px;
     padding-top:40px;
     padding-left: 50px;
-    color: white;
-    font-weight: 200;
+    color: gray;
+    /* font-weight: 200; */
 }
 #subt2{
     font-weight: 200;
-    font-size: 25px;
+    font-size: 20px;
     padding-top:13px;
-    padding-left: 50px;
-    color: white;
+    padding-left: 40px;
+    color: gray;
     font-weight: 300;
 }
 #subt3{
@@ -96,27 +166,29 @@ form {
 #about-text{
     padding-top:80px;
     padding-bottom: 50px;
+    padding-right:20px;
+    padding-left: 50px;
     font-weight: lighter;
 }
 .navbar-expand-lg{
-    border-bottom:2px solid #D3D3D3;
+    /* border-bottom:2px solid #D3D3D3; */
 }
 #navbar{
-    background-color:#505050;
+    /* background-color:#505050; */
     height: 75px;
-    border-bottom: solid #40E0D0 7px;
+    /* border-bottom: solid #40E0D0 7px; */
     /* font-weight: 200; */
 }
 
-#navlink1, #navlink2, #navlink3{
-    color:#40E0D0 !important;
+#navlink1, #navlink2, #navlink3, .nav-item{
+    color: gray !important;
     /* font-weight: 50 !important; */
     font-size: 20px;
     font-weight: 200; 
 }
 
 #nav-name{
-    color:#40E0D0 !important;
+    color: gray !important;
     /* font-weight: 50 !important; */
     font-size: 20px;
     font-weight: 200; 
